src/validation/tests/snapshots/rusty__validation__tests__statement_validation_tests__reference_to_reference_assignments_in_function_arguments.snap
---
source: src/validation/tests/statement_validation_tests.rs
expression: "&diagnostics"
---
error: Invalid assignment: cannot assign '__POINTER_TO_INT' to 'REF_TO STRUCT_params'
   ┌─ <internal>:47:13
   │
47 │             input1 := REF(global4),
   │             ^^^^^^^^^^^^^^^^^^^^^^ Invalid assignment: cannot assign '__POINTER_TO_INT' to 'REF_TO STRUCT_params'

error: Invalid assignment: cannot assign '__POINTER_TO_REAL' to 'REF_TO STRUCT_params'
   ┌─ <internal>:48:13
   │
48 │             input2 := REF(global5),
   │             ^^^^^^^^^^^^^^^^^^^^^^ Invalid assignment: cannot assign '__POINTER_TO_REAL' to 'REF_TO STRUCT_params'

error: Invalid assignment: cannot assign '__POINTER_TO_STRING' to 'REF_TO STRUCT_params'
   ┌─ <internal>:49:13
   │
49 │             input3 := REF(global6),
   │             ^^^^^^^^^^^^^^^^^^^^^^ Invalid assignment: cannot assign '__POINTER_TO_STRING' to 'REF_TO STRUCT_params'

error: Invalid assignment: cannot assign '__POINTER_TO_INT' to 'REF_TO STRUCT_params'
   ┌─ <internal>:55:13
   │
55 │             input1 := &(global4),
   │             ^^^^^^^^^^^^^^^^^^^^ Invalid assignment: cannot assign '__POINTER_TO_INT' to 'REF_TO STRUCT_params'

error: Invalid assignment: cannot assign '__POINTER_TO_REAL' to 'REF_TO STRUCT_params'
   ┌─ <internal>:56:13
   │
56 │             input2 := &(global5),
   │             ^^^^^^^^^^^^^^^^^^^^ Invalid assignment: cannot assign '__POINTER_TO_REAL' to 'REF_TO STRUCT_params'

error: Invalid assignment: cannot assign '__POINTER_TO___global_global6' to 'REF_TO STRUCT_params'
   ┌─ <internal>:57:13
   │
57 │             input3 := &(global6),
   │             ^^^^^^^^^^^^^^^^^^^^ Invalid assignment: cannot assign '__POINTER_TO___global_global6' to 'REF_TO STRUCT_params'


